cambios al sitio

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-  <p>hola estudiantes este es tu sitio web.. sigume 
-    dudas pregunta
-  </p>
+  <p>hola estudiantes este es tu sitio web.. amigas y amigos  </p>
 </body>
 </html>
